--- a/projeto1/index.html
+++ b/projeto1/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
     <head>
         <title>Projeto 1</title>
     </head>
@@ -30,7 +31,9 @@
         <a href="#sum">Sumário</a>
         
         <h2 id="intro">Introdução: </h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque et doloremque adipisci! Culpa, voluptates deserunt doloribus quidem impedit autem perferendis ducimus quos ipsam dignissimos aut repellendus a, quaerat quibusdam commodi similique consequatur magnam tempora error aspernatur! In maiores facere dicta, fugit doloribus exercitationem! Dignissimos corporis dolores dolor libero consequatur tempore reprehenderit fugiat, facilis consequuntur tenetur asperiores facere dolore omnis nulla vero. Cupiditate ipsum, dolorem a consequatur assumenda ad, earum minima animi quasi quibusdam nostrum reiciendis esse, eaque molestias sapiente fuga placeat explicabo illo saepe corrupti. Corporis aperiam iure voluptatibus temporibus minima vitae recusandae placeat id fuga! Ex obcaecati corrupti illum.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque et doloremque adipisci! Culpa, voluptates deserunt doloribus quidem impedit autem perferendis ducimus quos ipsam dignissimos aut repellendus a, quaerat quibusdam commodi similique consequatur magnam tempora error aspernatur! In maiores facere dicta, fugit doloribus exercitationem! Dignissimos corporis dolores dolor libero consequatur tempore reprehenderit fugiat, facilis consequuntur tenetur asperiores facere dolore omnis nulla vero.  <!--Cupiditate ipsum, dolorem a consequatur assumenda ad, earum minima animi quasi quibusdam nostrum reiciendis esse, eaque molestias sapiente fuga placeat explicabo illo saepe corrupti. Corporis aperiam iure voluptatibus temporibus minima vitae recusandae placeat id fuga! Ex obcaecati corrupti illum. -->
+
+        </p>
         <a href="#sum">Sumário</a>
 
         <h2 id="met">Metodologia</h2>
@@ -66,7 +69,7 @@
         <a href="pagina2.html">Página 2</a> | 
         <a href="pagina3.html">Página 3</a> | 
         <a href="pagina4.html">Página 4</a> |
-        <a href="https://www.google.com" target="_blank" alt="site do google">GOOGLE</a> 
+        <a href="https://www.google.com" target="_blank">GOOGLE</a> 
 
         <a href="#sum">Sumário</a>
     </body>
